--- a/validocu/package.json
+++ b/validocu/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.1",
+    "lucide-react": "^0.513.0",
     "pdfjs-dist": "^5.3.31",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
