--- a/validocu/package.json
+++ b/validocu/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.1",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.513.0",
     "pdfjs-dist": "^5.3.31",
     "react": "^19.1.0",
