--- a/validocu/package.json
+++ b/validocu/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.1",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.513.0",
     "pdfjs-dist": "^5.3.31",
