--- a/validocu/package.json
+++ b/validocu/package.json
@@ -40,7 +40,8 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "overrides": {
     "react-error-overlay": "6.0.9"
