--- a/validocu/package.json
+++ b/validocu/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.5",
+    "@laravel/echo-react": "^2.2.4",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@mui/styled-engine-sc": "^7.1.1",
@@ -22,6 +23,7 @@
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
+    "laravel-echo": "^2.2.4",
     "lucide-react": "^0.513.0",
     "pdfjs-dist": "^5.3.31",
     "react": "^19.1.0",
