--- a/validocu/package.json
+++ b/validocu/package.json
@@ -23,7 +23,6 @@
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
-    "laravel-echo": "^2.2.4",
     "lucide-react": "^0.513.0",
     "pdfjs-dist": "^5.3.31",
     "react": "^19.1.0",
@@ -42,6 +41,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "laravel-echo": "^2.2.4",
+    "pusher-js": "^8.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
