--- a/ValiDocuIA/docker-compose.yml
+++ b/ValiDocuIA/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - .env
     ports:
       - "5050:5050"
     volumes:
@@ -13,6 +15,8 @@ services:
       - ./outputs:/app/outputs
       - ./outputs/modelo_multiclase:/app/modelo_multiclase
     command: uvicorn app.main:app --host 0.0.0.0 --port 5050 --reload
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - validocu_network
 
